Fix: Configure for static deployment and add CI workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,29 @@
+name: Berlim CI
 
-name: CI
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "cu" ]
+  pull_request:
+    branches: [ "main", "cu" ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '20'
-    - name: Install dependencies
-      run: npm install
-    - name: Build
-      run: npm run build
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build project
+        run: npm run build
+
+      - name: Check build output
+        run: ls -la dist
